feat: adjust sliders styles

--- a/index.html
+++ b/index.html
@@ -87,8 +87,11 @@
           <div class="slider-container top-movies-slider-container swiper-wrapper">
 
           </div>
-          <div class="swiper-button-next"></div>
-          <div class="swiper-button-prev"></div>
+          <div class="swiper-btns">
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+          </div>
+
 
         </div>
       </section>
@@ -101,11 +104,11 @@
         </div>
         <div class="top-series-slider slider swiper" id="s2">
           <div class="slider-container top-series-slider-container swiper-wrapper">
-
           </div>
-          <div class="swiper-button-next"></div>
-          <div class="swiper-button-prev"></div>
-
+          <div class="swiper-btns">
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+          </div>
         </div>
       </section>
     </div>
