--- a/movies.html
+++ b/movies.html
@@ -57,7 +57,7 @@
   <main class="main-content">
     <div class="container">
       <h1 class="movies-title popular-title title-page">Popular movies</h1>
-      <div class="movies-filters filters">
+      <!-- <div class="movies-filters filters">
         <ul class="movies-filters-list filters-list">
           <li class="movies-filter-item filter-item">Sort</li>
           <li class="movies-filter-item filter-item">Genre</li>
@@ -65,7 +65,7 @@
           <li class="movies-filter-item filter-item">Production company</li>
         </ul>
         <button class="reset-filters">Reset filters</button>
-      </div>
+      </div> -->
       <div class="popular-movies-wrapper popular-wrapper"></div>
     </div>
   </main>
