--- a/search.html
+++ b/search.html
@@ -58,14 +58,14 @@
     <div class="container">
       <section class="search-results-wrapper section-mb">
         <h1 class="search-results-title title-page">Search results</h1>
-        <div class="search-results-filters">
+        <!-- <div class="search-results-filters">
           <ul class="search-results-filters-list">
             <li class="search-results-filter-item search-filter-item-selected">All</li>
             <li class="search-results-filter-item">Movies</li>
             <li class="search-results-filter-item">TV Shows</li>
             <li class="search-results-filter-item">Celebritites</li>
           </ul>
-        </div>
+        </div> -->
         <div class="search-results-heading"></div>
         <ul class="search-results section-list-l"></ul>
         <div class="search-pagination"></div>
