--- a/show-details.html
+++ b/show-details.html
@@ -67,9 +67,11 @@
 
       <section class="show-cast section-mb">
         <h4 class="details-title-secondary">Top Cast</h4>
-        <div class="swiper">
-          <div class="details-cast slider-container swiper-wrapper">
-
+        <div class="swiper show-cast-slider">
+          <div class="details-cast slider-container swiper-wrapper"></div>
+          <div class="swiper-btns">
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
           </div>
         </div>
 
@@ -84,8 +86,12 @@
 
       <section class="details-reviews section-mb">
         <h4 class="details-title-secondary">User reviews</h4>
-        <div class="swiper">
+        <div class="swiper details-reviews-slider">
           <div class="reviews-container slider-container swiper-wrapper"></div>
+          <div class="swiper-btns">
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+          </div>
         </div>
       </section>
     </div>
