--- a/shows.html
+++ b/shows.html
@@ -57,7 +57,7 @@
   <main class="main-content">
     <div class="container">
       <h1 class="shows-title popular-title title-page">Popular TV series</h1>
-      <div class="shows-filters filters">
+      <!-- <div class="shows-filters filters">
         <ul class="shows-filters-list filters-list">
           <li class="shows-filter-item filter-item">Sort</li>
           <li class="shows-filter-item filter-item">Genre</li>
@@ -65,7 +65,7 @@
           <li class="shows-filter-item filter-item">Production company</li>
         </ul>
         <button class="reset-filters">Reset filters</button>
-      </div>
+      </div> -->
       <div class="popular-shows-wrapper popular-wrapper"></div>
 
     </div>
