--- a/pages/show-details.html
+++ b/pages/show-details.html
@@ -11,9 +11,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/style.css">
-  <title>Popular celebs | MSB</title>
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <link rel="stylesheet" href="../lib/swiper-bundle.min.css">
+  <script src="../lib/swiper-bundle.min.js"></script>
+  <title>Serie Details | MSB</title>
 </head>
 
 <body>
@@ -28,13 +30,13 @@
             <a class="navigation-link" href="/">Home</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="/movies.html">Movies</a>
+            <a class="navigation-link" href="/pages/movies.html">Movies</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="/shows.html">TV Series</a>
+            <a class="navigation-link" href="/pages/shows.html">TV Series</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="/people.html">People</a>
+            <a class="navigation-link" href="/pages/people.html">People</a>
           </li>
           <!-- <li class="navigation-item">
             <a class="navigation-link" href="/">More</a>
@@ -42,7 +44,7 @@
         </ul>
       </nav>
       <div class="search">
-        <form action="/search.html" class="search-form">
+        <form action="/pages/search.html" class="search-form">
           <div class="search-field">
             <input class="search-input" autocomplete="off" type="text" id="search-term" name="search-term"
               placeholder="Search for anything">
@@ -55,18 +57,43 @@
     </div>
   </header>
   <main class="main-content">
-    <div class="container">
-      <h1 class="shows-title popular-title title-page">Popular celebs</h1>
-      <!-- <div class="shows-filters filters">
-        <ul class="shows-filters-list filters-list">
-          <li class="shows-filter-item filter-item">Sort</li>
-          <li class="shows-filter-item filter-item">Genre</li>
-          <li class="shows-filter-item filter-item">Sort</li>
-          <li class="shows-filter-item filter-item">Production company</li>
-        </ul>
-        <button class="reset-filters">Reset filters</button>
-      </div> -->
-      <div class="popular-people-wrapper popular-wrapper"></div>
+    <div class="container show-details-container">
+      <div class="back-home">
+        <a class="btn btn-back" href="/index.html"><i class="fa-solid fa-chevron-left"></i>Back To Home Page</a>
+      </div>
+      <section class="show-details section-mb">
+
+      </section>
+
+      <section class="show-cast section-mb">
+        <h4 class="details-title-secondary">Top Cast</h4>
+        <div class="swiper show-cast-slider">
+          <div class="details-cast slider-container swiper-wrapper"></div>
+          <div class="swiper-btns">
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+          </div>
+        </div>
+
+        <!-- <div class="details-similar">
+            <h3>More Like This</h3>
+            <div class="similar-container slider-container">
+              <div class="similar-card"></div>
+            </div>
+          </div> -->
+
+      </section>
+
+      <section class="details-reviews section-mb">
+        <h4 class="details-title-secondary">User reviews</h4>
+        <div class="swiper details-reviews-slider">
+          <div class="reviews-container slider-container swiper-wrapper"></div>
+          <div class="swiper-btns">
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+          </div>
+        </div>
+      </section>
     </div>
   </main>
   <footer class="footer">
@@ -79,7 +106,7 @@
   <div class="loader-overlay">
     <div class="loader"></div>
   </div>
-  <script src="./app.js"></script>
+  <script src="../app.js"></script>
 </body>
 
 </html>
