--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
             <a class="navigation-link" href="/">Home</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="/movies.html">Movies</a>
+            <a class="navigation-link" href="/pages/movies.html">Movies</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="/shows.html">TV Series</a>
+            <a class="navigation-link" href="/pages//shows.html">TV Series</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="/people.html">People</a>
+            <a class="navigation-link" href="/pages/people.html">People</a>
           </li>
           <!-- <li class="navigation-item">
             <a class="navigation-link" href="/">More</a>
@@ -46,7 +46,7 @@
         </ul>
       </nav>
       <div class="search">
-        <form action="/search.html" class="search-form">
+        <form action="/pages/search.html" class="search-form">
           <div class="search-field">
             <input class="search-input" autocomplete="off" type="text" id="search-term" name="search-term"
               placeholder="Search for anything">
