--- a/pages/people.html
+++ b/pages/people.html
@@ -11,9 +11,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/style.css">
-  <title>Popular Movies | MSB</title>
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <title>Popular celebs | MSB</title>
 </head>
 
 <body>
@@ -28,13 +28,13 @@
             <a class="navigation-link" href="/">Home</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="/movies.html">Movies</a>
+            <a class="navigation-link" href="/pages/movies.html">Movies</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="/shows.html">TV Series</a>
+            <a class="navigation-link" href="/pages/shows.html">TV Series</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="/people.html">People</a>
+            <a class="navigation-link" href="/pages/people.html">People</a>
           </li>
           <!-- <li class="navigation-item">
             <a class="navigation-link" href="/">More</a>
@@ -42,7 +42,7 @@
         </ul>
       </nav>
       <div class="search">
-        <form action="/search.html" class="search-form">
+        <form action="/pages/search.html" class="search-form">
           <div class="search-field">
             <input class="search-input" autocomplete="off" type="text" id="search-term" name="search-term"
               placeholder="Search for anything">
@@ -56,7 +56,7 @@
   </header>
   <main class="main-content">
     <div class="container">
-      <h1 class="shows-title popular-title title-page">Popular TV series</h1>
+      <h1 class="shows-title popular-title title-page">Popular celebs</h1>
       <!-- <div class="shows-filters filters">
         <ul class="shows-filters-list filters-list">
           <li class="shows-filter-item filter-item">Sort</li>
@@ -66,8 +66,7 @@
         </ul>
         <button class="reset-filters">Reset filters</button>
       </div> -->
-      <div class="popular-shows-wrapper popular-wrapper"></div>
-
+      <div class="popular-people-wrapper popular-wrapper"></div>
     </div>
   </main>
   <footer class="footer">
@@ -80,7 +79,7 @@
   <div class="loader-overlay">
     <div class="loader"></div>
   </div>
-  <script src="./app.js"></script>
+  <script src="../app.js"></script>
 </body>
 
 </html>
