--- a/pages/shows.html
+++ b/pages/shows.html
@@ -11,12 +11,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
     integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
-  <link rel="stylesheet" href="./css/reset.css">
-  <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" href="./lib/swiper-bundle.min.css">
-  <script src="./lib/swiper-bundle.min.js"></script>
-  <title>Person Details | MSB</title>
-
+  <link rel="stylesheet" href="../css/reset.css">
+  <link rel="stylesheet" href="../css/style.css">
+  <title>Popular Movies | MSB</title>
 </head>
 
 <body>
@@ -31,13 +28,13 @@
             <a class="navigation-link" href="/">Home</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="/movies.html">Movies</a>
+            <a class="navigation-link" href="/pages/movies.html">Movies</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="/shows.html">TV Series</a>
+            <a class="navigation-link" href="/pages/shows.html">TV Series</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="/people.html">People</a>
+            <a class="navigation-link" href="/pages/people.html">People</a>
           </li>
           <!-- <li class="navigation-item">
             <a class="navigation-link" href="/">More</a>
@@ -45,7 +42,7 @@
         </ul>
       </nav>
       <div class="search">
-        <form action="/search.html" class="search-form">
+        <form action="/pages/search.html" class="search-form">
           <div class="search-field">
             <input class="search-input" autocomplete="off" type="text" id="search-term" name="search-term"
               placeholder="Search for anything">
@@ -58,29 +55,19 @@
     </div>
   </header>
   <main class="main-content">
-    <div class="container person-details-container">
-      <div class="back-home">
-        <a class="btn btn-back" href="/index.html"><i class="fa-solid fa-chevron-left"></i>Back To Home Page</a>
-      </div>
-      <section class="person-details section-mb">
+    <div class="container">
+      <h1 class="shows-title popular-title title-page">Popular TV series</h1>
+      <!-- <div class="shows-filters filters">
+        <ul class="shows-filters-list filters-list">
+          <li class="shows-filter-item filter-item">Sort</li>
+          <li class="shows-filter-item filter-item">Genre</li>
+          <li class="shows-filter-item filter-item">Sort</li>
+          <li class="shows-filter-item filter-item">Production company</li>
+        </ul>
+        <button class="reset-filters">Reset filters</button>
+      </div> -->
+      <div class="popular-shows-wrapper popular-wrapper"></div>
 
-      </section>
-      <section class="person-photos section-mb">
-        <h4 class="details-title-secondary">Photos</h4>
-        <div class="photos-content swiper">
-          <div class="photos-container slider-container swiper-wrapper">
-
-          </div>
-        </div>
-      </section>
-      <section class="person-details section-mb">
-        <h4 class="details-title-secondary">Credits</h4>
-        <div class="credits-container">
-          <ul class="credits-list section-list-l">
-
-          </ul>
-        </div>
-      </section>
     </div>
   </main>
   <footer class="footer">
@@ -93,7 +80,7 @@
   <div class="loader-overlay">
     <div class="loader"></div>
   </div>
-  <script src="./app.js"></script>
+  <script src="../app.js"></script>
 </body>
 
 </html>
