chore: update files derictory

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <section class="top-movies section-mb">
         <div class="top-movies-header top-header">
           <h2 class="top-movies-title top-title">Top-rated movies</h2>
-          <a class="top-movies-all btn-all" href="/movies.html">view all
+          <a class="top-movies-all btn-all" href="/pages/movies.html">view all
             <i class="fa-solid fa-chevron-right"></i>
           </a>
         </div>
@@ -98,7 +98,7 @@
       <section class="top-series section-mb">
         <div class="top-series-header top-header">
           <h2 class="top-series-title top-title">Top-rated TV series</h2>
-          <a class="top-series-all btn-all" href="/shows.html">view all
+          <a class="top-series-all btn-all" href="/pages/shows.html">view all
             <i class="fa-solid fa-chevron-right"></i>
           </a>
         </div>
