chore: update files derictory

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a class="navigation-link" href="/pages/movies.html">Movies</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="/pages//shows.html">TV Series</a>
+            <a class="navigation-link" href="/pages/shows.html">TV Series</a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="/pages/people.html">People</a>
