--- a/pages/person-details.html
+++ b/pages/person-details.html
@@ -71,6 +71,10 @@
           <div class="photos-container slider-container swiper-wrapper">
 
           </div>
+          <div class="swiper-btns">
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+          </div>
         </div>
       </section>
       <section class="person-details section-mb">
